# sentry-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
sentry_mcp/: __init__.py  __main__.py  client.py  server.py
